# fastwel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_msc_x86.bat
src_c/common/: CMakeLists.txt  msdos_emul.c  resource.c  resource.h
src_c/dummy/: CMakeLists.txt  dummy.c
src_c/msdos_linux/: BIOS.H  DOS.H
src_c/p55/: CMakeLists.txt  p55i.c
